<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <com.agora.crane.widget.CircleImageView
        android:id="@+id/iv_register_logo"
        android:layout_width="@dimen/sw_100dp"
        android:layout_height="@dimen/sw_100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/sw_50dp"
        android:src="@mipmap/logo"
        />

    <TextView
        android:id="@+id/tv_register_app_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sw_40dp"
        android:layout_marginTop="@dimen/sw_10dp"
        android:textColor="@color/black"
        android:textSize="@dimen/sw_20sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/iv_register_logo"
        />


    <TextView
        android:id="@+id/tv_register_account"
        android:layout_width="@dimen/sw_300dp"
        android:layout_height="@dimen/sw_40dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_register_logo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/sw_30dp"
        android:layout_marginTop="@dimen/sw_150dp"
        android:gravity="center|start"
        android:textSize="@dimen/sw_15sp"
        android:hint="@string/account"
        android:paddingStart="@dimen/sw_20dp"
        android:paddingEnd="0px"
        android:background="@drawable/bg_gray_0_radius_20"
        />

    <EditText
        android:id="@+id/et_register_account"
        android:layout_width="@dimen/sw_235dp"
        android:layout_height="@dimen/sw_40dp"
        app:layout_constraintTop_toTopOf="@+id/tv_register_account"
        app:layout_constraintStart_toStartOf="@+id/tv_register_account"
        android:layout_marginStart="@dimen/sw_65dp"
        android:hint="@string/input_account"
        android:textSize="@dimen/sw_15sp"
        android:background="@null"
        />

    <ImageView
        android:id="@+id/iv_register_clean_account"
        android:layout_width="@dimen/sw_15dp"
        android:layout_height="@dimen/sw_15dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_register_account"
        app:layout_constraintTop_toTopOf="@+id/tv_register_account"
        app:layout_constraintBottom_toBottomOf="@+id/tv_register_account"
        android:layout_marginEnd="@dimen/sw_10dp"
        android:src="@drawable/icon_close"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/tv_register_password"
        android:layout_width="@dimen/sw_300dp"
        android:layout_height="@dimen/sw_40dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_account"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/sw_30dp"
        android:layout_marginTop="@dimen/sw_30dp"
        android:gravity="center|start"
        android:textSize="@dimen/sw_15sp"
        android:hint="@string/password"
        android:paddingStart="@dimen/sw_20dp"
        android:paddingEnd="0px"
        android:background="@drawable/bg_gray_0_radius_20"
        />

    <EditText
        android:id="@+id/et_register_password"
        android:layout_width="@dimen/sw_235dp"
        android:layout_height="@dimen/sw_40dp"
        app:layout_constraintTop_toTopOf="@+id/tv_register_password"
        app:layout_constraintStart_toStartOf="@+id/tv_register_password"
        android:layout_marginStart="@dimen/sw_65dp"
        android:hint="@string/input_password"
        android:textSize="@dimen/sw_15sp"
        android:background="@null"
        android:inputType="textPassword"
        />

    <ImageView
        android:id="@+id/iv_register_clean_password"
        android:layout_width="@dimen/sw_15dp"
        android:layout_height="@dimen/sw_15dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_register_password"
        app:layout_constraintTop_toTopOf="@+id/tv_register_password"
        app:layout_constraintBottom_toBottomOf="@+id/tv_register_password"
        android:layout_marginEnd="@dimen/sw_10dp"
        android:src="@drawable/icon_close"
        android:visibility="gone"
        />


    <TextView
        android:id="@+id/tv_register"
        android:layout_width="@dimen/sw_300dp"
        android:layout_height="@dimen/sw_40dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_password"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/sw_30dp"
        android:layout_marginTop="@dimen/sw_50dp"
        android:gravity="center"
        android:textSize="@dimen/sw_15sp"
        android:background="@drawable/bg_gray_0_radius_20"
        android:text="@string/register"
        />


</androidx.constraintlayout.widget.ConstraintLayout>